<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <ImageView
            android:scaleType="centerCrop"
            android:src="@drawable/photo"
            android:id="@+id/profImg"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp" />

        <TextView
            android:textSize="32sp"
            android:id="@+id/prof_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profImg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/name" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/prof_name"
        android:background="#000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <TextView
            android:textStyle="bold"
            android:id="@+id/trackt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/trackt" />

        <EditText
            android:background="@android:color/transparent"
            android:editable="false"
            android:layout_margin="16dp"
            android:id="@+id/track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/trackt"
            android:layout_toRightOf="@+id/trackt"
            android:text="@string/track" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/countryt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trackt"
            android:layout_margin="16dp"
            android:text="@string/countryt" />

        <EditText
            android:background="@android:color/transparent"
            android:editable="false"
            android:layout_margin="16dp"
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/track"
            android:layout_alignBaseline="@+id/countryt"
            android:layout_toRightOf="@+id/countryt"
            android:text="@string/country" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/emailt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/countryt"
            android:layout_margin="16dp"
            android:text="@string/emailt" />

        <EditText
            android:background="@android:color/transparent"
            android:editable="false"
            android:layout_margin="16dp"
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/country"
            android:layout_alignBaseline="@+id/emailt"
            android:layout_toRightOf="@+id/emailt"
            android:text="@string/email" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/phonenot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailt"
            android:layout_margin="16dp"
            android:text="@string/phone_not" />

        <EditText
            android:background="@android:color/transparent"
            android:editable="false"
            android:id="@+id/phoneno"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_alignBaseline="@+id/phonenot"
            android:layout_toRightOf="@+id/phonenot"
            android:text="@string/phone_no" />

        <TextView
            android:textStyle="bold"
            android:id="@+id/slackt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phonenot"
            android:layout_margin="16dp"
            android:text="@string/slack_usernamet" />

        <EditText
            android:background="@android:color/transparent"
            android:editable="false"
            android:id="@+id/slack"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_alignBaseline="@+id/slackt"
            android:layout_toRightOf="@+id/slackt"
            android:text="@string/slack_username" />

    </RelativeLayout>


</LinearLayout>

</ScrollView>

